# CacheBrowns

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: hydration.rs  lib.rs  managed_cache.rs  source_of_record.rs  store.rs
src/hydration/: polling.rs  pull.rs
src/source_of_record/: http.rs
src/store/: discrete_files.rs  memory.rs  replacement.rs  tiered.rs
src/store/replacement/: lru.rs
