[package]
name = "cache_browns"
description = "A general-purpose programmable, declarative cache"
version = "0.0.1"
edition = "2021"
authors = ["Chris Henk <chris.henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Azure/CacheBrowns"
readme = "README.md"
keywords = ["cache"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["std"] }
bincode = "1.3.3"
uuid = { version = "1.3.3", features = ["v4"] }
interruptible_polling = "0.2.0"
thiserror = "1.0.58"
itertools = "0.12.1"

[dev-dependencies]
derive_builder = "0.20.0"
mockall = "0.12.1"
tempdir = "0.3.7"
