[package]
name = "cache_browns"
description = "A general-purpose programmable, declarative cache"
version = "0.0.1"
edition = "2021"
authors = ["Chris Henk <chris.henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/CacheBrowns"
readme = "README.md"
keywords = ["cache"]

[features]
async = []
sync = []
tokio = []
all = ["async", "sync", "tokio"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["std"] }
bincode = "1.3.3"
uuid = { version = "1.11.0", features = ["v4"] }
interruptible_polling = "0.2.0"
thiserror = "1.0.64"
itertools = "0.13.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-service = "0.1.0"
trait-variant = "0.1.2"

[dev-dependencies]
derive_builder = "0.20.2"
mockall = "0.13.0"
tempdir = "0.3.7"
