[package]
name = "cache_browns"
description = "A general-purpose programmable, declarative cache"
version = "0.0.1"
edition = "2021"
authors = ["Chris Henk <chris.henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/CacheBrowns"
readme = "README.md"
keywords = ["cache"]

[dependencies]
bincode = "1.3.3"
http = "1.2.0"
http-cache-semantics = "2.1.0"
interruptible_polling = { version = "0.3.0", features = ["tokio"] }
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["std"] }
thiserror = "2.0.9"
tokio = { version = "1.40.0", features = ["rt", "sync"] }
tower-service = "0.3.3"
trait-variant = "0.1.2"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
mockall = "0.13.1"
tempdir = "0.3.7"
test-case = "3.3.1"
